[gd_scene load_steps=31 format=3 uid="uid://b20r7p25gf8a8"]

[ext_resource type="Script" path="res://Entities/Player/hoodie_girl.gd" id="1_8awlb"]
[ext_resource type="Texture2D" uid="uid://cbpy3aaiiincp" path="res://Entities/Player/Player_SpriteSheet_V4.png" id="2_6k8bn"]
[ext_resource type="Script" path="res://Entities/Player/States/leash_state.gd" id="4_d658a"]
[ext_resource type="Script" path="res://Entities/Player/States/State_Machine.gd" id="4_m0132"]
[ext_resource type="Script" path="res://Entities/Player/States/ground_state.gd" id="5_ubs6t"]
[ext_resource type="Script" path="res://Entities/Player/States/air_state.gd" id="6_5nm4s"]
[ext_resource type="Script" path="res://Entities/Player/States/landing_state.gd" id="7_hwlnm"]
[ext_resource type="Script" path="res://Entities/Player/States/crouch_state.gd" id="8_a6iuu"]
[ext_resource type="Script" path="res://Entities/Player/States/state_debug_label.gd" id="8_a8117"]
[ext_resource type="FontFile" uid="uid://77pb63feqlcs" path="res://Assets/fonts/PixelOperator8.ttf" id="8_c555u"]
[ext_resource type="Script" path="res://Entities/Player/States/dash_state.gd" id="10_itjjn"]
[ext_resource type="Script" path="res://Entities/Player/States/grab_state.gd" id="11_2iheb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_amtyf"]
radius = 6.5
height = 54.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mtueb"]
size = Vector2(4, 15)

[sub_resource type="Animation" id="Animation_8dtl6"]
length = 0.001

[sub_resource type="Animation" id="Animation_olfsl"]
resource_name = "crouch_idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_wr0pc"]
resource_name = "crouch_walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_67wq8"]
resource_name = "falling"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 2), Vector2i(4, 2)]
}

[sub_resource type="Animation" id="Animation_cbrqq"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ugjrb"]
resource_name = "interact"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_470sy"]
resource_name = "jump"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2)]
}

[sub_resource type="Animation" id="Animation_nnx6k"]
resource_name = "jump_going_up"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_h7tid"]
resource_name = "jump_start"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_2807e"]
resource_name = "landing"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(5, 2), Vector2i(6, 2)]
}

[sub_resource type="Animation" id="Animation_nh53h"]
resource_name = "leash_hold"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(5, 3)]
}

[sub_resource type="Animation" id="Animation_ynf4u"]
resource_name = "leash_pull"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(4, 4)]
}

[sub_resource type="Animation" id="Animation_21v13"]
resource_name = "leash_throw"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}

[sub_resource type="Animation" id="Animation_fvqwi"]
resource_name = "leash_walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_svd12"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nhig4"]
_data = {
"RESET": SubResource("Animation_8dtl6"),
"crouch_idle": SubResource("Animation_olfsl"),
"crouch_walk": SubResource("Animation_wr0pc"),
"falling": SubResource("Animation_67wq8"),
"idle": SubResource("Animation_cbrqq"),
"interact": SubResource("Animation_ugjrb"),
"jump": SubResource("Animation_470sy"),
"jump_going_up": SubResource("Animation_nnx6k"),
"jump_start": SubResource("Animation_h7tid"),
"landing": SubResource("Animation_2807e"),
"leash_hold": SubResource("Animation_nh53h"),
"leash_pull": SubResource("Animation_ynf4u"),
"leash_throw": SubResource("Animation_21v13"),
"leash_walk": SubResource("Animation_fvqwi"),
"walk": SubResource("Animation_svd12")
}

[node name="Hoodie_Girl" type="CharacterBody2D" groups=["player"]]
collision_layer = 4
collision_mask = 14
script = ExtResource("1_8awlb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("2_6k8bn")
flip_h = true
hframes = 7
vframes = 5

[node name="CollisionShape_Player" type="CollisionShape2D" parent="."]
process_physics_priority = 1
position = Vector2(0, -27)
shape = SubResource("CapsuleShape2D_amtyf")

[node name="Grab_Box" type="Area2D" parent="."]
position = Vector2(9, -24)
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grab_Box"]
shape = SubResource("RectangleShape2D_mtueb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nhig4")
}

[node name="Crouch_Raycast_Left" type="RayCast2D" parent="."]
position = Vector2(-6, -16)
enabled = false
target_position = Vector2(0, -50)
collision_mask = 11

[node name="Crouch_Raycast_Right" type="RayCast2D" parent="."]
position = Vector2(6, -16)
enabled = false
target_position = Vector2(0, -50)
collision_mask = 11

[node name="Leash_Point" type="Node2D" parent="."]
position = Vector2(0, -24)

[node name="Leash_Raycast" type="RayCast2D" parent="Leash_Point"]
self_modulate = Color(0, 1, 0, 1)
target_position = Vector2(75, 0)
collision_mask = 12

[node name="Leash_Line" type="Line2D" parent="Leash_Point"]
points = PackedVector2Array(0, 0)
width = 2.0
default_color = Color(1, 0, 0.815686, 1)
joint_mode = 2
end_cap_mode = 2

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("animation_player", "character", "initial_state")]
script = ExtResource("4_m0132")
animation_player = NodePath("../AnimationPlayer")
character = NodePath("..")
initial_state = NodePath("Ground")

[node name="Ground" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state", "crouch_state", "leash_state", "grab_state", "dash_state")]
script = ExtResource("5_ubs6t")
air_state = NodePath("../Air")
crouch_state = NodePath("../Crouch")
leash_state = NodePath("../Leash")
grab_state = NodePath("../Grab")
dash_state = NodePath("../Dash")

[node name="Air" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("landing_state", "leash_state", "dash_state")]
script = ExtResource("6_5nm4s")
landing_state = NodePath("../Landing")
leash_state = NodePath("../Leash")
dash_state = NodePath("../Dash")

[node name="Landing" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("7_hwlnm")
ground_state = NodePath("../Ground")
can_move = false

[node name="Crouch" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state", "ground_state", "dash_state")]
script = ExtResource("8_a6iuu")
air_state = NodePath("../Air")
ground_state = NodePath("../Ground")
dash_state = NodePath("../Dash")

[node name="Leash" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state", "ground_state")]
script = ExtResource("4_d658a")
weak = 500.0
normal = 750.0
strong = 100.0
drag_strength = 75.0
air_state = NodePath("../Air")
ground_state = NodePath("../Ground")

[node name="Dash" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state", "ground_state")]
script = ExtResource("10_itjjn")
air_state = NodePath("../Air")
ground_state = NodePath("../Ground")

[node name="Grab" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state", "crouch_state", "ground_state")]
script = ExtResource("11_2iheb")
air_state = NodePath("../Air")
crouch_state = NodePath("../Crouch")
ground_state = NodePath("../Ground")
idle_animation = "leash_hold"
walk_animation = "leash_walk"

[node name="State_Label" type="Label" parent="."]
visible = false
offset_left = -55.0
offset_top = -80.0
offset_right = 68.0
offset_bottom = -57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_c555u")
text = "State:"
script = ExtResource("8_a8117")

[connection signal="animation_finished" from="AnimationPlayer" to="CharacterStateMachine/Air" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="CharacterStateMachine/Landing" method="_on_animation_player_animation_finished"]
